<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/relax_image">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="282dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ferbajoo.timedream.core.custom_views.CircularSeekBar
        android:id="@+id/croller_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:enabled="true"
        app:innerCircleColor="#60000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:min="0"
        app:max="720"
        app:ringColor="#50000000"
        app:ringWidth="0.4"
        app:showProgressText="false" />

    <ImageButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/time_reset"
        android:src="@drawable/reset_time"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/croller_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/croller_view"
        app:layout_constraintVertical_bias="0.509" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="194dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_main">

        <TextView
            android:id="@+id/tv_less_minutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="- 5"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:visibility="invisible"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_more_minutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="+ 5"
            android:visibility="invisible"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:minHeight="30dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@+id/croller_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/less_minutes"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:clickable="true"
            android:contentDescription="@string/remove_five_minuts"
            android:focusable="true"
            android:src="@drawable/ic_remove" />

        <ImageButton
            android:id="@+id/ib_play"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangule"
            android:clickable="true"
            android:contentDescription="@string/start_or_stop_time"
            android:focusable="true"
            android:src="@drawable/play_anim" />


        <ImageButton
            android:id="@+id/more_minutes"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_right"
            android:clickable="true"
            android:contentDescription="@string/add_five_minuts"
            android:focusable="true"
            android:src="@drawable/ic_add" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="59"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/croller_view"
        app:layout_constraintStart_toStartOf="@+id/croller_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>